Update index.html with minor changes
Minor updates to the HTML structure.

--- a/index.html
+++ b/index.html
@@ -31,4 +31,7 @@
     <p>Jika halaman tidak berpindah otomatis, <a href="home.html">klik di sini</a>.</p>
   </div>
 </body>
+  <!-- update minor -->
+
 </html>
+
